# unirtos-uart-demos

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  demo.manifest.json  env_config.json  uart_demo.c  uart_demo.h
